--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @charset "UFT-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+ 
 
 *{
     margin: 0px;
@@ -9,7 +13,7 @@
 
 body,html{
     font-size: 1em;
-    font-family: "Kanit", sans-serif;
+    font-family: "Montserrat", sans-serif;
     
 }
 
@@ -27,9 +31,12 @@ header> p{
     text-align: center;
     font-weight: bold;
     color: #B9A894;
-    
-    
+    font-family: "Open Sans", sans-serif;
+    padding-bottom: 20px;
+
+  
 }
+
 header{
     background-image: linear-gradient(to top, rgb(1, 6, 9),rgb(29,38, 45));
 }
@@ -37,6 +44,7 @@ header{
 nav{
     background-color: rgb(1, 6, 9); 
     padding: 10px;
+    font-family: "Open Sans", sans-serif;;
 }
 
 nav>a{
@@ -76,6 +84,8 @@ main{
     text-align:center;
     height: 10px;
     border-radius: 20px;
+    font-family: "Open Sans", sans-serif;
+    padding-top: 20px;
     
 }
 
