--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 body,html{
     font-size: 1em;
     font-family: "Montserrat", sans-serif;
-    
+    background-color:  rgb(1, 6, 90); 
 }
 
 header > h1{
