--- a/style.css
+++ b/style.css
@@ -41,7 +41,9 @@ header> p{
 nav{
     background-color: rgb(1, 6, 9); 
     padding: 10px;
-    font-family: "Open Sans", sans-serif;;
+    font-family: "Open Sans", sans-serif;
+    display: block;
+    list-style: none;
 }
 
 nav>a{
@@ -58,6 +60,12 @@ nav > a:hover {
     border-radius: 15%;
     padding: 5px;
 }
+
+span#burguer{
+    background-color: rgb(0, 0, 0);
+    color: white;
+    display: block;
+    text-align: center; }
 
 
 
