--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ nav > a:hover {
     padding: 5px;
 }
 body{
-    height: 100vw;
-    width: 100vh;
+    height: 90vh;
+    width: 90vw;
 }
 
 main{
